<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/accel_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="32dp"/>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/accel_x_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/accel_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/accel_y_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/accel_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/accel_z_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/accel_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="32dp" />

    <TextView
        android:text="@string/gps_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="32dp"/>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/gps_lat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/gps_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/gps_long_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/gps_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/gps_alt_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/gps_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

    </LinearLayout>

    <Space
        android:layout_width="16dp"
        android:layout_height="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="16dp"
            android:layout_height="16dp" />

        <TextView
            android:text="@string/gps_acc_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/gps_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"/>

    </LinearLayout>

</LinearLayout>
